fix spacing between paragraphs

--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -3,6 +3,10 @@ body {
 	line-height:24px;
 }
 
+p {
+	margin:12px 0;
+}
+
 article {
   max-width:725px;
 }
